--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.3'
 services:
   node:
-    container_name: project_node
+    container_name: project_nodetp
     image: 'node:latest'
     working_dir: /home/node/app
     command:
@@ -17,7 +17,7 @@ services:
     networks:
       - my-network
   mongo:
-    container_name: project_mongo
+    container_name: project_mongotp
     image: mongo
     ports:
       - "27017:27017"
